--- a/ProjetoCalculadora/index.html
+++ b/ProjetoCalculadora/index.html
@@ -17,34 +17,34 @@
     </div>
     <div class="buttons">
       <div class="btns-row">
-        <button class="btn">√x</button>
-        <button class="btn">x²</button>
-        <button id="btnC" class="btn">C</button>
-        <button class="btn">⇐</button>
+        <button class="btn" data-group="operation">√x</button>
+        <button class="btn" data-group="operation">x²</button>
+        <button class="btn" data-group="clear">C</button>
+        <button class="btn" data-group="backspace">⇐</button>
       </div>
       <div class="btns-row">
-        <button class="btn">7</button>
-        <button class="btn">8</button>
-        <button class="btn">9</button>
-        <button class="btn">÷</button>
+        <button class="btn" data-group="char">7</button>
+        <button class="btn" data-group="char">8</button>
+        <button class="btn" data-group="char">9</button>
+        <button class="btn" data-group="operation">÷</button>
       </div>
       <div class="btns-row">
-        <button class="btn">4</button>
-        <button class="btn">5</button>
-        <button class="btn">6</button>
-        <button class="btn">×</button>
+        <button class="btn" data-group="char">4</button>
+        <button class="btn" data-group="char">5</button>
+        <button class="btn" data-group="char">6</button>
+        <button class="btn" data-group="operation">×</button>
       </div>
       <div class="btns-row">
-        <button class="btn">1</button>
-        <button class="btn">2</button>
-        <button class="btn">3</button>
-        <button class="btn">–</button>
+        <button class="btn" data-group="char">1</button>
+        <button class="btn" data-group="char">2</button>
+        <button class="btn" data-group="char">3</button>
+        <button class="btn" data-group="operation">–</button>
       </div>
       <div class="btns-row">
-        <button class="btn">0</button>
-        <button class="btn">.</button>
-        <button class="btn">+</button>
-        <button class="btn">=</button>
+        <button class="btn" data-group="char">0</button>
+        <button class="btn" data-group="char">.</button>
+        <button class="btn" data-group="operation">+</button>
+        <button class="btn" data-group="equal">=</button>
       </div>
     </div>
   </div>
