--- a/ProjetoCalculadora/index.html
+++ b/ProjetoCalculadora/index.html
@@ -10,41 +10,43 @@
 </head>
 
 <body>
-  <div class="calculator">
-    <div class="display-container">
-      <span id="display-preview-op" class="display-preview-op"></span>
-      <input type="text" id="display" class="display-ipt" readonly value="0">
-    </div>
-    <div class="buttons">
-      <div class="btns-row">
-        <button class="btn" data-group="operation">√x</button>
-        <button class="btn" data-group="operation">x²</button>
-        <button class="btn" data-group="clear">C</button>
-        <button class="btn" data-group="backspace">⇐</button>
+  <div class="container">
+    <div class="calculator">
+      <div class="display-container">
+        <span id="display-preview-op" class="display-preview-op"></span>
+        <input type="text" id="display" class="display-ipt" readonly value="0">
       </div>
-      <div class="btns-row">
-        <button class="btn" data-group="char">7</button>
-        <button class="btn" data-group="char">8</button>
-        <button class="btn" data-group="char">9</button>
-        <button class="btn" data-group="operation">÷</button>
-      </div>
-      <div class="btns-row">
-        <button class="btn" data-group="char">4</button>
-        <button class="btn" data-group="char">5</button>
-        <button class="btn" data-group="char">6</button>
-        <button class="btn" data-group="operation">×</button>
-      </div>
-      <div class="btns-row">
-        <button class="btn" data-group="char">1</button>
-        <button class="btn" data-group="char">2</button>
-        <button class="btn" data-group="char">3</button>
-        <button class="btn" data-group="operation">–</button>
-      </div>
-      <div class="btns-row">
-        <button class="btn" data-group="char">0</button>
-        <button class="btn" data-group="char">.</button>
-        <button class="btn" data-group="operation">+</button>
-        <button class="btn" data-group="equal">=</button>
+      <div class="buttons">
+        <div class="btns-row">
+          <button class="btn" data-group="operation">√x</button>
+          <button class="btn" data-group="operation">x²</button>
+          <button class="btn" data-group="clear">C</button>
+          <button class="btn" data-group="backspace">⇐</button>
+        </div>
+        <div class="btns-row">
+          <button class="btn" data-group="char">7</button>
+          <button class="btn" data-group="char">8</button>
+          <button class="btn" data-group="char">9</button>
+          <button class="btn" data-group="operation">÷</button>
+        </div>
+        <div class="btns-row">
+          <button class="btn" data-group="char">4</button>
+          <button class="btn" data-group="char">5</button>
+          <button class="btn" data-group="char">6</button>
+          <button class="btn" data-group="operation">×</button>
+        </div>
+        <div class="btns-row">
+          <button class="btn" data-group="char">1</button>
+          <button class="btn" data-group="char">2</button>
+          <button class="btn" data-group="char">3</button>
+          <button class="btn" data-group="operation">–</button>
+        </div>
+        <div class="btns-row">
+          <button class="btn" data-group="char">0</button>
+          <button class="btn" data-group="char">.</button>
+          <button class="btn" data-group="operation">+</button>
+          <button class="btn" data-group="equal">=</button>
+        </div>
       </div>
     </div>
   </div>
