projeto crud - form parcial

--- a/ProjetoCRUD/index.html
+++ b/ProjetoCRUD/index.html
@@ -25,7 +25,8 @@
           <h1 class="font-bold text-3xl">Raças de Cachorro</h1>
         </div>
         <div id="loggedinContainer" class="flex gap-5 hidden">
-          <span id="loggedinMsg" class="bg-black rounded-full text-white block w-10 h-10 flex justify-center items-center"></span>
+          <span id="loggedinMsg"
+            class="bg-black rounded-full text-white block w-10 h-10 flex justify-center items-center"></span>
           <img id="logoutIcon" src="./assets/logout.svg" alt="icone de fazer logout" class="cursor-pointer">
         </div>
       </div>
@@ -43,17 +44,20 @@
             <div id="formContainer">
               <div id="formTabs" class="">
                 <a id="loginTab" class="inline-block py-3 px-8 cursor-pointer font-bold rounded-t-xl">Login</a>
-                <a id="registerTab" class="inline-block py-3 px-8 pointer cursor-pointer font-bold rounded-t-xl">Registrar</a>
+                <a id="registerTab"
+                  class="inline-block py-3 px-8 pointer cursor-pointer font-bold rounded-t-xl">Registrar</a>
               </div>
               <form id="loginForm" class="p-8 w-[35rem] bg-white rounded-b-xl">
                 <div class="mb-5 w-full">
                   <label for="email" class="block w-full">Email:</label>
-                  <input type="email" name="email" id="email" placeholder="exemplo@email.com" class="p-3 rounded w-full">
+                  <input type="email" name="email" id="email" placeholder="exemplo@email.com"
+                    class="p-3 rounded w-full">
                   <span id="loginEmailSpan" class="text-red-600 text-2xl"></span>
                 </div>
                 <div class="w-full">
                   <label for="password" class="block w-full">Senha:</label>
-                  <input type="password" name="password" id="password" placeholder="********" class="p-3 rounded w-full">
+                  <input type="password" name="password" id="password" placeholder="********"
+                    class="p-3 rounded w-full">
                   <span id="loginPasswordSpan" class="text-red-600 text-2xl"></span>
                 </div>
                 <button id="btnLogin" class="bg-teal-800 text-white py-3 w-full rounded mt-10">Login</button>
@@ -61,16 +65,20 @@
               <form id="registerForm" class="p-8 w-[35rem] bg-white rounded-b-xl hidden">
                 <div class="mb-5 w-full">
                   <label for="registerEmail" class="block w-full">Email:</label>
-                  <input type="registerEmail" name="registerEmail" id="registerEmail" placeholder="exemplo@email.com" class="p-3 rounded w-full">
+                  <input type="registerEmail" name="registerEmail" id="registerEmail" placeholder="exemplo@email.com"
+                    class="p-3 rounded w-full">
                   <span id="registerEmailSpan" class="text-red-600 text-2xl"></span>
                 </div>
                 <div class="w-full relative">
                   <label for="registerPass" class="block w-full">Senha:</label>
-                  <input type="password" name="registerPass" id="registerPass" placeholder="********" class="p-3 rounded w-full">
+                  <input type="password" name="registerPass" id="registerPass" placeholder="********"
+                    class="p-3 rounded w-full">
                   <span id="registerPassSpan" class="text-red-600 text-2xl"></span>
                   <div id="registerEyes" class="absolute right-2 top-14">
-                    <img id="registerOpenEye" src="./assets/login-imgs/eye-open.svg" alt="icone olho aberto" class="w-8 cursor-pointer">
-                    <img id="regiserClosedEye" src="./assets/login-imgs/eye-closed.svg" alt="icone olho fechado" class="hidden w-8 cursor-pointer">
+                    <img id="registerOpenEye" src="./assets/login-imgs/eye-open.svg" alt="icone olho aberto"
+                      class="w-8 cursor-pointer">
+                    <img id="regiserClosedEye" src="./assets/login-imgs/eye-closed.svg" alt="icone olho fechado"
+                      class="hidden w-8 cursor-pointer">
                   </div>
                 </div>
                 <button id="btnRegister" class="bg-teal-800 text-white py-3 w-full rounded mt-10">Registrar</button>
@@ -80,14 +88,66 @@
         </section>
       </div>
 
-      <div id="homePage" class="hidden">
+      <!-- <div id="homePage" class="hidden max-sm:min-h-[calc(100vh-120px)] min-h-[calc(100vh-100px)] bg-gray-100"> -->
+      <div id="homePage" class="hidden h-[200rem] bg-gray-100">
         <section id="banner">
           <img src="./assets/home-imgs/dog-banner.jpg" alt="banner cachorro"
             class="max-sm:h-48 max-lg:h-80 max-2xl:h-96 h-[30rem] w-full object-cover">
         </section>
 
         <section>
-          <h2>Reças de Cachorro Cadastradas</h2>
+          <div class="container mx-auto px-6">
+            <div class="mt-8 h-16 flex items-center justify-between">
+              <h2 class="font-bold text-4xl">Raças Cadastradas</h2>
+              <button id="btnAddBreed" class="border-2 rounded-lg py-2 px-3 bg-teal-300 border-solid">Adicionar nova
+                raça</button>
+            </div>
+
+            <div id="listContainer">
+
+            </div>
+          </div>
+
+          <div id="formPopup" class="fixed left-0 right-0 top-0 h-screen">
+            <div id="formOverlay" class="w-full h-full bg-gray-500 bg-opacity-50 flex items-center justify-center">
+              <div id="formContainer" class="bg-white p-8 rounded-lg max-h-[95vh] max-w-[95vw] overflow-auto relative">
+                <button class="absolute right-3 top-3 text-4xl rotate-45 ">+</button>
+                <h1 class="font-bold mb-5 text-3xl text-center">Adicionar Nova Raça</h1>
+
+                <form id="newBreedForm">
+                  <div class="mb-4 flex">
+                    <label for="breedName" class="inline-block mr-3 flex items-center">Nome:</label>
+                    <input placeholder="Nome da raça" type="text" name="breedName" id="breedName" class="w-full border border-solid border-gray-300 rounded-lg p-2">
+                  </div>
+                  <div class="mb-4">
+                    <div class="flex">
+                      <label for="breedImage" class="inline-block mr-3 flex items-center">Foto:</label>
+                      <input placeholder="Link da foto do cachorro" type="text" name="breedImage" id="breedImage" class="w-full border border-solid border-gray-300 rounded-lg p-2">
+                    </div>
+                    <div class="h-52 max-sm:w-full w-[35rem] mt-2 bg-gray-100 rounded-lg border border-solid border-gray-300 flex justify-center items-center">
+                      <img src="./assets/img.svg" alt="icone de uma imagem/foto" class="opacity-30">
+                    </div>
+                  </div>
+                  <div class="mb-4 flex">
+                    <label for="breedCountry" class="inline-block mr-3 flex items-center whitespace-nowrap">País de Origem:</label>
+                    <select name="breedCountry" id="breedCountry" class="cursor-pointer w-full border border-solid border-gray-300 rounded-lg p-2">
+                      <option value="" disabled selected>Selecione um país</option>
+                    </select>
+                  </div>
+                  <div class="mb-4 flex">
+                    <label for="breedYear" class="inline-block mr-3 flex items-center whitespace-nowrap">Ano de Origem:</label>
+                    <input type="number" name="breedYear" id="breedYear" placeholder="ex: 2023" class="cursor-pointer w-full border border-solid border-gray-300 rounded-lg p-2">
+                  </div>
+                  <div class="mb-8">
+                    <label for="breedDescription" class="block w-full">Descrição:</label>
+                    <textarea name="breedDescription" id="breedDescription" cols="30" rows="3" class="resize-none w-full border border-solid border-gray-300 rounded-lg p-2"></textarea>
+                  </div>
+
+                  <button class="w-full bg-teal-300 p-3 rounded-lg">Registrar</button>
+                </form>
+              </div>
+            </div>
+          </div>
         </section>
       </div>
     </main>
